# raspberry_ninja

./: .actrc  .gitignore  AUTO_TURN_FIX_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CNAME  COMBINE_RECORDINGS.md  CONTRIBUTORS.md  Dockerfile.debian11  Dockerfile.ubuntu22  FINAL_FIXES_SUMMARY.md  FINAL_IMPLEMENTATION.md  FINAL_ROOM_RECORDING_STATUS.md  FINAL_SUBPROCESS_IMPLEMENTATION.md  FIX_NDI_FREEZING.md  GIT_HOOKS_SETUP.md  HLS_SEGMENT_FIX.md  ICE_FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLER_UPDATES.md  MEDIA_VALIDATION_GUIDE.md  MULTI_PEER_RECORDING.md  MULTI_STREAM_ISSUE_ANALYSIS.md  QUICK_START.md  README.md  README_OLD.md  RECORDING_USAGE_GUIDE.md  REFACTORING_GUIDE.md  RESOLUTION_CHANGE_FIX.md  ROOM_RECORDING.md  ROOM_RECORDING_FIXES_SUMMARY.md  ROOM_RECORDING_IMPLEMENTATION.md  SUBPROCESS_ARCHITECTURE_COMPLETE.md  SUMMARY.md  TESTING_GUIDE.md  TESTS_WORKING.md  TROUBLESHOOTING.md  TURN_DEBUG_GUIDE.md  TURN_FEATURE.md  TURN_SOLUTION.md  (+168 more)
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_ATTRIBUTION.md  RELEASE_PROCESS.md
archive/: MKV_AUDIO_VIDEO_RECORDING_COMPLETE.md  MKV_AUDIO_VIDEO_RECORDING_FIXED.md  MKV_RENEGOTIATION_FIX.md  ROOM_RECORDING_DIAGNOSIS.md  ROOM_RECORDING_FIX.py  ROOM_RECORDING_STATUS.md  SUBPROCESS_ROUTING_FIX_SUMMARY.md  TEST_ROOM_RECORDING.md  WEBRTC_PROMISE_THREADING_FIX.md  check_vdo_ninja_streams.py  combine_recordings.py  debug_room.py  debug_vlc_playback.py  (+111 more)
raspberry_pi/: Cargo.toml  README.md  firmware_update.sh  installer.sh  installer_64.sh  installer_buster.sh  raspininja.service  setup_c779.sh  simpleinstall.md  simpleinstall.sh
(+66 files in other folders)
